--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -1,3 +1,5 @@
 fixtures:
+  repositories:
+    "stdlib": "ssh://git@github.com/cegeka/puppet-stdlib.git"
   symlinks:
     "hornetq": "#{source_dir}"
